Create an initial framework for the backend JIT compiler (#287)
Co-authored-by: Cameron Purdy <699204+cpurdy@users.noreply.github.com>